# gradient-atlas

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/: mount_st_helens_elevation.csv  ngorongoro_elevation.csv  yosemite_valley_elevation.csv
examples/: mount-st-helens.json  ngorongoro.json  template.json  yosemite.json
src/dem_optimizer_art/: __init__.py  cli.py  dem.py  optimizers.py  render.py  terrain_fetch.py  webapp.py
src/dem_optimizer_art/web/: app.js  index.html  map.css  styles.css  viewer.css
src/gradient_atlas/: __init__.py  cli.py  optimizers.py  render.py  terrain_fetch.py  webapp.py
src/gradient_atlas/web/: app.js  index.html  map.css  styles.css  viewer.css
tests/: test_core.py
tools/: sample_terrain.py
