[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dem-optimizer-art"
version = "0.1.0"
description = "Turn digital elevation models into optimizer trajectory wall art"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "DEM Optimizer Art contributors"}]
dependencies = []

[project.optional-dependencies]
images = ["Pillow>=10"]
geotiff = ["rasterio>=1.3"]
preview = ["cairosvg>=2.7"]
all = ["Pillow>=10", "rasterio>=1.3", "cairosvg>=2.7"]

[project.scripts]
dem-art = "dem_optimizer_art.cli:main"
dem-art-ui = "dem_optimizer_art.webapp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dem_optimizer_art = ["web/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
