[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gradient-atlas"
version = "0.1.0"
description = "Turn digital elevation models into optimizer trajectory wall art"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Gradient Atlas contributors"}]
dependencies = []

[project.optional-dependencies]
images = ["Pillow>=10"]
geotiff = ["rasterio>=1.3"]
preview = ["cairosvg>=2.7"]
all = ["Pillow>=10", "rasterio>=1.3", "cairosvg>=2.7"]

[project.scripts]
gradient-atlas = "gradient_atlas.cli:main"
gradient-atlas-ui = "gradient_atlas.webapp:main"
# Backwards-compatible command aliases.
gradient-art = "gradient_atlas.cli:main"
gradient-art-ui = "gradient_atlas.webapp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gradient_atlas = ["web/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
